finished assignment, added comments, fixed memory leak in main.c

--- a/queue/Makefile
+++ b/queue/Makefile
@@ -1,3 +1,6 @@
+#Makefile for assignment 9
+#with phony targets all clean spotless test and deps
+
 MKFILE    = Makefile
 DEPSFILE  = ${MKFILE}.deps
 
